[package]
name = "rs-bili-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
 name = "rs_bili_api"
 path = "src/lib.rs"


[dependencies]
tokio = {version = "1.21.1",features=["rt","macros"] }
qrcode = {version = "0.11.0"}
reqwest_cookie_store = "0.4.0"
reqwest = { version = "0.11.12",features=["json","cookies","blocking"] }
serde = {version="1.0.145",features=["serde_derive"]}
serde_json = {version="1.0.85"}
paste = "1.0.12"
flate2 = "1.0.24"